<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="product"
            type="retailmanager.spyhunter272.com.room.table.Product" />

        <variable
            name="productDialogHolder"
            type="retailmanager.spyhunter272.com.holder.ProductDialogHolder" />

    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ibtn_close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:scaleType="center"
            android:tint="#606060"
            android:src="@drawable/ic_product_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Products Details"
            android:textFontWeight="700"
            android:textSize="22sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ccc" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/dialog_root_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/relative_spinner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin_bottom"
        android:background="@drawable/spinner_border"
        android:orientation="horizontal"
        android:padding="5dp"
       >

        <Spinner
            android:id="@+id/spinner_product_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:selectedItemPosition="@={product.category}"
            tools:listitem="@layout/row_simple_spinner_textview"
            android:spinnerMode="dropdown" />


    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_product_name"
        />

    <EditText
        android:id="@+id/ed_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/bg_edt_border"
        android:padding="@dimen/ed_padding"
        android:layout_marginBottom="@dimen/components_margin_bottom"
        android:text="@={product.name}"
        android:inputType="textCapWords" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_barcode"
            android:visibility="@{productDialogHolder.barcode ? View.VISIBLE : View.GONE }"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_gst"
            android:textAlignment="viewEnd"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin_bottom"
        >

    <TextView
        android:id="@+id/tv_product_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/bg_edt_border"
        android:padding="@dimen/ed_padding"
        android:textSize="18sp"
        android:layout_weight="1"
        android:visibility="@{productDialogHolder.barcode ? View.VISIBLE : View.GONE }"
        android:layout_marginRight="@dimen/components_margin_left_right"
        android:text="@={product.barcode}"
        android:drawableTint="#ccc"
        android:drawableRight="@drawable/ic_dashboard_black_24dp"
         />

        <FrameLayout
            android:id="@+id/relative_spinner_view_gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_border"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:visibility="@{productDialogHolder.productGst ? View.VISIBLE : View.GONE }"
            android:padding="6dp"
            >

        <Spinner
            android:id="@+id/spinner_product_gst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:spinnerMode="dropdown"
            android:entries="@array/gst_integer"
            android:selectedItemPosition="@={product.gst}"
            android:paddingVertical="10dp"
             />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_hsn_code"
        android:visibility="@{productDialogHolder.hsn ? View.VISIBLE : View.GONE }"

        />

    <EditText
        android:id="@+id/ed_hsn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edt_border"
        android:ems="10"
        android:layout_marginBottom="@dimen/components_margin_bottom"
        android:visibility="@{productDialogHolder.hsn ? View.VISIBLE : View.GONE }"
        android:text="@={product.hsn}"
        android:inputType="textCapCharacters"
        android:padding="@dimen/ed_padding" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/label_qty"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/components_margin_bottom"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/ibtn_qty_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_add_24dp"
            android:onClick="@{(v)->product.onClick(v)}"
            />

        <EditText
            android:id="@+id/ed_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edt_border"
            android:ems="10"
            android:textAlignment="center"
            android:text="@={product.in_stock_qty+``,default=``}"
            android:inputType="numberDecimal"
            android:padding="@dimen/ed_padding" />

        <ImageButton
            android:id="@+id/ibtn_qty_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="@{(v)->product.onClick(v)}"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_remove_24dp"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:visibility="@{productDialogHolder.bprice ? View.VISIBLE : View.GONE }"
            android:hint="@string/label_buy_price"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_sell_price"
            android:textAlignment="textEnd"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/components_margin_bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_buy_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/components_margin_left_right"
            android:layout_weight="1"
            android:visibility="@{productDialogHolder.bprice ? View.VISIBLE : View.GONE }"
            android:background="@drawable/bg_edt_border"
            android:ems="10"
            android:text="@={product.b_price+``,default=``}"
            android:inputType="numberDecimal"
            android:padding="@dimen/ed_padding" />

        <EditText
            android:id="@+id/ed_sell_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/components_margin_left_right"
            android:layout_weight="1"
            android:background="@drawable/bg_edt_border"
            android:ems="10"
            android:text="@={product.s_price+``,default=``}"
            android:inputType="numberDecimal"
            android:padding="@dimen/ed_padding" />
    </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/button_padding"
            android:backgroundTint="@color/colorPrimary"
            android:text="save" />

        <Button
            android:id="@+id/btn_dialog_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:padding="@dimen/button_padding"
            android:backgroundTint="@color/colorAccent"
            android:text="cancel" />

    </LinearLayout>


</LinearLayout>

</layout>